change headers sizes, add margin 0 to css reset

--- a/style/pages/_hero.scss
+++ b/style/pages/_hero.scss
@@ -1,1 +1,9 @@
 @use "../global/" as *;
+
+#hero {
+  height: 90svh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
