--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ blockquote,
 dl,
 dd {
   margin-block-end: 0;
+  margin: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -90,11 +91,11 @@ body {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 4rem;
 }
 
 h2 {
-  font-size: 1.25rem;
+  font-size: 2rem;
 }
 
 nav {
@@ -125,6 +126,14 @@ nav .social-media-icons {
 .nav-links ul li:hover {
   color: #00f8e1;
   cursor: pointer;
+}
+
+#hero {
+  height: 90svh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /*# sourceMappingURL=App.css.map */
