--- a/style/global/_boilerplate.scss
+++ b/style/global/_boilerplate.scss
@@ -38,6 +38,8 @@ body {
   line-height: 1.5;
   padding: 0;
   margin: 0;
+  background: rgb(254, 254, 254);
+  background: linear-gradient(124deg, rgba(254, 254, 254, 1) 0%, #83ffff 100%);
 }
 
 /* A elements that don't have a class get default styles */
@@ -74,4 +76,9 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+
+section:not(:first-child) {
+  max-width: 1200px;
+  margin: 4rem auto;
 }
