--- a/src/App.css
+++ b/src/App.css
@@ -161,5 +161,31 @@ nav .social-media-icons {
     transform: translateY(2rem);
   }
 }
+#market {
+  border: 3px solid white;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+}
+#market table {
+  width: 100%;
+}
+#market tr {
+  display: grid;
+  grid-template-columns: 1fr 1fr 0.5fr 35%;
+  font-size: 1.25rem;
+  border-bottom: 2px solid black;
+}
+#market th,
+#market td {
+  text-align: center;
+}
+#market th:first-child,
+#market td:first-child {
+  text-align: left;
+}
+#market th:last-child,
+#market td:last-child {
+  text-align: end;
+}
 
 /*# sourceMappingURL=App.css.map */
