--- a/style/pages/_market.scss
+++ b/style/pages/_market.scss
@@ -9,11 +9,25 @@
     width: 100%;
   }
 
+  th {
+    font-size: 1.4rem;
+  }
+
   tr {
     display: grid;
     grid-template-columns: 1fr 1fr 0.5fr 35%;
     font-size: 1.25rem;
     border-bottom: 2px solid black;
+    padding: 0.75rem;
+  }
+
+  tbody tr {
+    transition: 0.3s ease-in-out;
+  }
+
+  tbody tr:hover {
+    background-color: $bg-light;
+    cursor: pointer;
   }
 
   th,
