--- a/style/pages/_market.scss
+++ b/style/pages/_market.scss
@@ -15,14 +15,23 @@
 
   tr {
     display: grid;
-    grid-template-columns: 1fr 1fr 0.5fr 35%;
+    grid-template-columns: 1fr 1fr 1fr 35%;
     font-size: 1.25rem;
     border-bottom: 2px solid black;
     padding: 0.75rem;
   }
 
+  tbody img {
+    width: 30px;
+    margin-right: 5px;
+  }
+
   tbody tr {
     transition: 0.3s ease-in-out;
+  }
+
+  tbody tr td:first-child {
+    display: flex;
   }
 
   tbody tr:hover {
@@ -32,16 +41,18 @@
 
   th,
   td {
-    text-align: center;
+    text-align: end;
   }
 
   th:first-child,
   td:first-child {
-    text-align: left;
+    text-align: start;
   }
+}
 
-  th:last-child,
-  td:last-child {
-    text-align: end;
-  }
+.profit {
+  color: green;
+}
+.loss {
+  color: red;
 }
