--- a/style/pages/_market.scss
+++ b/style/pages/_market.scss
@@ -56,3 +56,27 @@
 .loss {
   color: red;
 }
+
+.select-page {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin: 1rem 0;
+}
+
+.select-page-btn {
+  width: 35px;
+  height: 35px;
+  border-radius: 50px;
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: $dark-blue;
+  color: white;
+  cursor: pointer;
+}
+
+.select-page-btn.active {
+  color: $highlight;
+}
