--- a/style/pages/_joinUs.scss
+++ b/style/pages/_joinUs.scss
@@ -1,1 +1,8 @@
 @use "../global/" as *;
+
+#join-us {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
