--- a/style/pages/_joinUs.scss
+++ b/style/pages/_joinUs.scss
@@ -5,4 +5,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  button {
+    padding: 0.5rem 2rem;
+    margin-top: 1rem;
+    background-color: $dark-blue;
+    color: white;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 5px 5px 20px black;
+    cursor: pointer;
+  }
 }
