--- a/style/pages/_joinUs.scss
+++ b/style/pages/_joinUs.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
 
-  button {
+  a {
     padding: 0.5rem 2rem;
     margin-top: 1rem;
     background-color: $dark-blue;
