--- a/style/pages/_detailView.scss
+++ b/style/pages/_detailView.scss
@@ -1,9 +1,11 @@
 @use "../global/" as *;
 
 #detail-view {
+  min-height: 90svh;
   .coin-details {
-    display: flex;
-    gap: 2rem;
+    display: grid;
+    grid-template-columns: 20% 30% 1fr;
+    gap: 4rem;
     border: 3px solid white;
     padding: 1rem;
   }
@@ -24,6 +26,25 @@
     div span:last-child {
       min-width: 170px;
       text-align: end;
+    }
+  }
+
+  .coin-description {
+    height: 210px;
+    word-break: break-word;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+      width: 10px;
+    }
+    &::-webkit-scrollbar-track {
+      background: $dark-blue;
+      border-radius: 5px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: $highlight;
+      border-radius: 5px;
     }
   }
 }
