--- a/style/pages/_detailView.scss
+++ b/style/pages/_detailView.scss
@@ -3,15 +3,24 @@
 #detail-view {
   min-height: 90svh;
   .coin-details {
-    display: grid;
-    grid-template-columns: 20% 30% 1fr;
-    gap: 4rem;
+    margin: 0 2rem;
+    display: flex;
+    justify-content: space-between;
     border: 3px solid white;
     padding: 1rem;
+    gap: 2rem;
+    align-items: center;
+  }
+
+  .image-and-details {
+    display: flex;
+    gap: 1rem;
+    width: 60%;
   }
 
   .coin-info {
-    font-size: 1.25rem;
+    width: 100%;
+    font-size: 1.125rem;
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
@@ -20,17 +29,16 @@
     div {
       display: grid;
       grid-template-columns: 50% 50%;
-      gap: 1rem;
     }
 
     div span:last-child {
-      min-width: 170px;
       text-align: end;
     }
   }
 
   .coin-description {
     height: 210px;
+    width: 40%;
     word-break: break-word;
     overflow-y: scroll;
 
@@ -72,6 +80,36 @@
     button.active {
       background-color: $dark-blue;
       color: white;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  #detail-view {
+    .coin-details {
+      flex-direction: column;
+      margin: 0 1rem;
+    }
+
+    .coin-description {
+      width: 100%;
+    }
+
+    .image-and-details {
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 640px) {
+  #detail-view {
+    .image-and-details {
+      flex-direction: column;
+
+      img {
+        width: 30%;
+        margin: 0 auto;
+      }
     }
   }
 }
