--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,31 @@ nav .social-media-icons {
   cursor: pointer;
 }
 
+.toggle-bar {
+  display: none;
+  width: 20px;
+  height: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+}
+.toggle-bar:hover > * {
+  border-top: 3px solid #00f8e1;
+}
+.toggle-bar span {
+  border-top: 3px solid black;
+  background-color: #002c45;
+  transition: 0.3s ease-in-out;
+}
+
+@media (max-width: 640px) {
+  .nav-links {
+    display: none;
+  }
+  .toggle-bar {
+    display: flex;
+  }
+}
 #hero {
   height: 90svh;
   display: flex;
