--- a/style/pages/_navbar.scss
+++ b/style/pages/_navbar.scss
@@ -34,3 +34,30 @@ nav {
     }
   }
 }
+
+.toggle-bar {
+  display: none;
+  width: 20px;
+  height: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  &:hover > * {
+    border-top: 3px solid $highlight;
+  }
+
+  span {
+    border-top: 3px solid black;
+    background-color: $dark-blue;
+    transition: 0.3s ease-in-out;
+  }
+}
+
+@media (max-width: 640px) {
+  .nav-links {
+    display: none;
+  }
+  .toggle-bar {
+    display: flex;
+  }
+}
