--- a/style/pages/_market.scss
+++ b/style/pages/_market.scss
@@ -4,9 +4,17 @@
   border: 3px solid white;
   border-radius: 5px;
   padding: 0.5rem 1rem;
+  margin: 0 1rem;
+  overflow-x: auto;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   table {
     width: 100%;
+    min-width: 900px;
+    white-space: nowrap;
   }
 
   th {
@@ -15,10 +23,11 @@
 
   tr {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 35%;
+    grid-template-columns: 30% 1fr 1fr 25%;
     font-size: 1.25rem;
     border-bottom: 2px solid black;
     padding: 0.75rem;
+    margin-right: 1rem;
   }
 
   tbody img {
@@ -53,6 +62,7 @@
 .profit {
   color: green;
 }
+
 .loss {
   color: red;
 }
