--- a/src/App.css
+++ b/src/App.css
@@ -191,15 +191,17 @@ nav .social-media-icons {
   border-radius: 5px;
   padding: 0.5rem 1rem;
   margin: 0 1rem;
-  overflow-x: auto;
-}
-#market::-webkit-scrollbar {
-  display: none;
 }
 #market table {
   width: 100%;
-  min-width: 900px;
+  min-width: 850px;
   white-space: nowrap;
+}
+#market .table {
+  overflow-x: auto;
+}
+#market .table::-webkit-scrollbar {
+  display: none;
 }
 #market th {
   font-size: 1.4rem;
@@ -210,7 +212,6 @@ nav .social-media-icons {
   font-size: 1.25rem;
   border-bottom: 2px solid black;
   padding: 0.75rem;
-  margin-right: 1rem;
 }
 #market tbody img {
   width: 30px;
