--- a/style/pages/_hero.scss
+++ b/style/pages/_hero.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   text-transform: uppercase;
+  text-align: center;
 
   img {
     width: 50px;
@@ -21,5 +22,16 @@
   }
   50% {
     transform: translateY(2rem); // Bewegt sich um 2rem nach oben in der Mitte der Animation
+  }
+}
+
+@media (max-width: 500px) {
+  #hero {
+    h1 {
+      font-size: 3rem;
+    }
+    h2 {
+      font-size: 1.75rem;
+    }
   }
 }
