--- a/src/App.css
+++ b/src/App.css
@@ -282,6 +282,7 @@ nav .social-media-icons {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 #join-us a {
   padding: 0.5rem 2rem;
@@ -296,6 +297,14 @@ nav .social-media-icons {
   cursor: pointer;
 }
 
+@media (max-width: 500px) {
+  #join-us h2 {
+    font-size: 2.75rem;
+  }
+  #join-us h3 {
+    font-size: 1.75rem;
+  }
+}
 footer {
   background-color: #002c45;
   padding: 3rem 1rem;
