--- a/style/pages/_joinUs.scss
+++ b/style/pages/_joinUs.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 
   a {
     padding: 0.5rem 2rem;
@@ -17,5 +18,16 @@
     border-radius: 5px;
     box-shadow: 5px 5px 20px black;
     cursor: pointer;
+  }
+}
+
+@media (max-width: 500px) {
+  #join-us {
+    h2 {
+      font-size: 2.75rem;
+    }
+    h3 {
+      font-size: 1.75rem;
+    }
   }
 }
