--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,9 @@ nav .social-media-icons {
   color: #00f8e1;
   cursor: pointer;
 }
+.nav-links ul img {
+  display: none;
+}
 
 .toggle-bar {
   display: none;
@@ -159,10 +162,43 @@ nav .social-media-icons {
 
 @media (max-width: 640px) {
   .nav-links {
-    display: none;
+    position: absolute;
+    inset: 0;
+    width: 100vw;
+    height: 50vh;
+    background-color: #002c45;
+    box-shadow: 0px 2px 5px black;
+    transform: translateY(-150%);
+    transition: transform 0.3s ease-in-out;
+  }
+  .nav-links ul {
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+  }
+  .nav-links ul li {
+    color: white;
+  }
+  .nav-links img {
+    position: absolute;
+    width: 45px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .logo {
+    width: 140px;
   }
   .toggle-bar {
     display: flex;
+  }
+  .social-media-icons {
+    display: none;
+  }
+  .nav-links.active {
+    transform: translateX(0%);
   }
 }
 #hero {
