--- a/style/pages/_navbar.scss
+++ b/style/pages/_navbar.scss
@@ -32,6 +32,10 @@ nav {
       color: $highlight;
       cursor: pointer;
     }
+
+    img {
+      display: none;
+    }
   }
 }
 
@@ -55,9 +59,49 @@ nav {
 
 @media (max-width: 640px) {
   .nav-links {
-    display: none;
+    position: absolute;
+    inset: 0;
+    width: 100vw;
+    height: 50vh;
+    background-color: $dark-blue;
+    box-shadow: 0px 2px 5px black;
+    transform: translateY(-150%);
+    transition: transform 0.3s ease-in-out;
+
+    ul {
+      height: 100%;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+    }
+
+    ul li {
+      color: white;
+    }
+
+    img {
+      position: absolute;
+      width: 45px;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
+
+  .logo {
+    width: 140px;
+  }
+
   .toggle-bar {
     display: flex;
+  }
+
+  .social-media-icons {
+    display: none;
+  }
+
+  .nav-links.active {
+    transform: translateX(0%);
   }
 }
