--- a/style/pages/_navbar.scss
+++ b/style/pages/_navbar.scss
@@ -13,9 +13,7 @@ nav {
   }
   .social-media-icons {
     display: flex;
-    justify-content: end;
     gap: 0.5rem;
-    width: 175px;
   }
 }
 
@@ -84,7 +82,7 @@ nav {
       padding: 0;
     }
 
-    ul li {
+    ul li a {
       color: white;
     }
 
