--- a/src/App.css
+++ b/src/App.css
@@ -242,7 +242,7 @@ nav .social-media-icons {
   border: 3px solid white;
   border-radius: 5px;
   padding: 0.5rem 1rem;
-  margin: 0 1rem;
+  margin: 0 auto;
 }
 #market table {
   width: 100%;
