--- a/style/pages/_market.scss
+++ b/style/pages/_market.scss
@@ -4,7 +4,7 @@
   border: 3px solid white;
   border-radius: 5px;
   padding: 0.5rem 1rem;
-  margin: 0 1rem;
+  margin: 0 auto;
 
   table {
     width: 100%;
