--- a/src/App.css
+++ b/src/App.css
@@ -184,7 +184,7 @@ nav .social-media-icons {
     align-items: center;
     padding: 0;
   }
-  .nav-links ul li a {
+  .nav-links ul li {
     color: white;
   }
   .nav-links img {
